--- a/gb/19/6/29/n11354541.md
+++ b/gb/19/6/29/n11354541.md
@@ -1,18 +1,18 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ulskhc2002/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ulskhc2002/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ulskhc2002/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ulskhc2002/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ulskhc2002/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ulskhc2002/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ulskhc2002/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ulskhc2002/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ulskhc2002/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ulskhc2002/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ulskhc2002/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ulskhc2002/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ulskhc2002/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ulskhc2002/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ulskhc2002/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ulskhc2002/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ulskhc2002/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ulskhc2002/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ulskhc2002/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ulskhc2002/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ulskhc2002/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ulskhc2002/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ulskhc2002/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ulskhc2002/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ulskhc2002/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ulskhc2002/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ulskhc2002/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ulskhc2002/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ulskhc2002/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ulskhc2002/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ulskhc2002/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/ulskhc2002/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/ulskhc2002/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ulskhc2002/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ulskhc2002/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ulskhc2002/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ulskhc2002/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ulskhc2002/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ulskhc2002/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ulskhc2002/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ulskhc2002/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/ulskhc2002/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ulskhc2002/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ulskhc2002/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ulskhc2002/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>陈思敏：独立人民法庭判决强烈震慑中共</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/06/11-600x400-2-1.jpeg" />
-<h6>“人民法庭”于6月17日在伦敦做出终审判决，判定中国（中共）活摘良心犯器官的行为仍然存在，法轮功学员是器官供应的最主要来源。（冠奇／大纪元）
+<h6>“人民法庭”于2019年6月17日在伦敦做出终审判决，判定中国（中共）活摘良心犯器官的行为仍然存在，法轮功学员是器官供应的最主要来源。（冠奇／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2019年06月30日讯】6月17日以来，诸多国际主流媒体纷纷报导，设于英国伦敦的全球第一个“<ahref="https://github.com/ulskhc2002/djy/blob/master/gb/tag/%E7%8B%AC%E7%AB%8B%E4%BA%BA%E6%B0%91%E6%B3%95%E5%BA%AD.md#1">独立人民法庭</a>”<ahref="https://chinatribunal.com/">终审判决</a>，中共一直从法轮功学员等良心犯身上强摘器官证据确凿，中共犯下反人类罪。</p>
-<p>据相关报导，<ahref="https://github.com/ulskhc2002/djy/blob/master/gb/tag/%E7%8B%AC%E7%AB%8B%E4%BA%BA%E6%B0%91%E6%B3%95%E5%BA%AD.md#1">独立人民法庭</a>主席杰弗里?<ahref="https://github.com/ulskhc2002/djy/blob/master/gb/tag/%E5%B0%BC%E6%96%AF%E7%88%B5%E5%A3%AB.md#1">尼斯爵士</a>（Sir Geoffrey Nice QC）宣判时，一再特别强调，中共当局也受邀加入法律程式，由于中共不愿配合此案的审理，独立人民法庭的调查过程是独立完成的，但有足够的证据支持终审判决结果。</p>
+	<p>【大纪元2019年06月30日讯】6月17日以来，诸多国际主流媒体纷纷报导，设于英国伦敦的全球第一个“<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%8B%AC%E7%AB%8B%E4%BA%BA%E6%B0%91%E6%B3%95%E5%BA%AD.md#1">独立人民法庭</a>”<ahref="https://chinatribunal.com/">终审判决</a>，中共一直从法轮功学员等良心犯身上强摘器官证据确凿，中共犯下反人类罪。</p>
+<p>据相关报导，<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%8B%AC%E7%AB%8B%E4%BA%BA%E6%B0%91%E6%B3%95%E5%BA%AD.md#1">独立人民法庭</a>主席杰弗里?<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%B0%BC%E6%96%AF%E7%88%B5%E5%A3%AB.md#1">尼斯爵士</a>（Sir Geoffrey Nice QC）宣判时，一再特别强调，中共当局也受邀加入法律程式，由于中共不愿配合此案的审理，独立人民法庭的调查过程是独立完成的，但有足够的证据支持终审判决结果。</p>
 <p>独立人民法庭在6月17日终审判决前，去年12月和今年4月，分别举行了两次听证。</p>
-<p>在第一次听证会结束后，独立法庭随即做出临时判决，<ahref="https://github.com/ulskhc2002/djy/blob/master/gb/tag/%E5%B0%BC%E6%96%AF%E7%88%B5%E5%A3%AB.md#1">尼斯爵士</a>亲自说明了这个不寻常做法的原因，先以临时判决公诸于世，希望广为传播，或许会为那些可能面临被杀害的人，带来生还的机会。也就是中共强摘器官罪行确认无疑，且当下还在进行着。</p>
+<p>在第一次听证会结束后，独立法庭随即做出临时判决，<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%B0%BC%E6%96%AF%E7%88%B5%E5%A3%AB.md#1">尼斯爵士</a>亲自说明了这个不寻常做法的原因，先以临时判决公诸于世，希望广为传播，或许会为那些可能面临被杀害的人，带来生还的机会。也就是中共强摘器官罪行确认无疑，且当下还在进行着。</p>
 <p>在第二次听证会上，更多中共活摘器官罪证曝光，包括法轮功学员于溟出示他本人在中国大陆冒险拍摄的第一手证据。于溟是在今年稍早来到自由海外，此前遭到中共非法关押累计12年。</p>
 <p>在终审宣判时，独立人民法庭裁定，强摘器官得到中共政府批准，法轮功学员是强摘器官的主要受害者，现在波及其他信仰团体。法庭结论：强摘器官至今仍在继续。</p>
-<p>法庭的调查报告，除了呈现中共强摘法轮功学员器官确凿可信的证据，并详述了迫害元凶前中共领导人<ahref="https://github.com/ulskhc2002/djy/blob/master/gb/tag/%E6%B1%9F%E6%B3%BD%E6%B0%91.md#1">江泽民</a>对法轮功进行的恶意清洗，1999年，江泽民指示时任副总理李岚清，对法轮功学员“名誉上搞臭，经济上搞垮，肉体上消灭”。2001年，江泽民本人说：“对法轮功怎么处理都不过分，打死白打死，打死算自杀。”</p>
+<p>法庭的调查报告，除了呈现中共强摘法轮功学员器官确凿可信的证据，并详述了迫害元凶前中共领导人<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%B1%9F%E6%B3%BD%E6%B0%91.md#1">江泽民</a>对法轮功进行的恶意清洗，1999年，江泽民指示时任副总理李岚清，对法轮功学员“名誉上搞臭，经济上搞垮，肉体上消灭”。2001年，江泽民本人说：“对法轮功怎么处理都不过分，打死白打死，打死算自杀。”</p>
 <p>据报导，宣判当天现场旁听席上座无虚席，裁定结果令人欣慰，现场一片欢呼。其实人们对这一天审判结果的企盼，不是自“独立人民法庭”去年开庭审理开始，而是自十几年前中共活摘法轮功学员器官的罪行被曝光就开始。</p>
 <p>这次国际传媒及舆论的高度关注显示，独立人民法庭这一判决非常震撼人心、轰动世界，惟令中共备感震慑与恐惧，因为“独立人民法庭”终审判决可为世界各国政府乃至国际法庭直接采纳。</p>
 <p>如美国国务卿蓬佩奥在6月21日《2018年世界宗教自由人权报告》的发言中，提到了“独立人民法庭”首次听证的临时判决。</p>
@@ -20,44 +20,49 @@
 <p>在6月17日独立人民法庭公布终审判决，英国医学会（BMA）医学伦理委员会也无时差地回应，由委员会主席约翰?奇泽姆（John Chisholm）博士在英国医学会官网上发布的一篇新闻稿中说：“我们对独立人民法庭今天的判决表示高度关注。”</p>
 <p>英国医学会还有两个呼吁，中国“尽快对强摘器官进行一次彻底、独立的调查”，同时英国政府“根据独立人民法庭的调查结果重新考虑英国在这个问题上的立场，利用英国在国际社会的影响力，保证进行一次彻底、真正的调查”。</p>
 <p>国际人权律师大卫?麦塔斯（David Matas）接受大纪元专访时表示，终审判决，事情还没结束，因为所有罪犯都必须被绳之以法。</p>
-<p>独立人民法庭的终审判决，被视为即将清算中共活摘罪行的国际<ahref="https://github.com/ulskhc2002/djy/blob/master/gb/tag/%E5%A4%A7%E5%AE%A1%E5%88%A4.md#1">大审判</a>奠定了坚实的基础。在此之前，各国政府、国际机构、媒体和民众对中共反人类罪还有最后机会表示他们不会袖手旁观。</p>
-<p>目前，有不少国家已经开始慎重对待独立人民法庭的判决，相信接下来会有更多国家跟进。联合国、世界卫生组织等国际机构也不能置身事外，包括中国现在领导人习近平也被呼吁清算元凶中共前党魁<ahref="https://github.com/ulskhc2002/djy/blob/master/gb/tag/%E6%B1%9F%E6%B3%BD%E6%B0%91.md#1">江泽民</a>。#</p>
+<p>独立人民法庭的终审判决，被视为即将清算中共活摘罪行的国际<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%A4%A7%E5%AE%A1%E5%88%A4.md#1">大审判</a>奠定了坚实的基础。在此之前，各国政府、国际机构、媒体和民众对中共反人类罪还有最后机会表示他们不会袖手旁观。</p>
+<p>目前，有不少国家已经开始慎重对待独立人民法庭的判决，相信接下来会有更多国家跟进。联合国、世界卫生组织等国际机构也不能置身事外，包括中国现在领导人习近平也被呼吁清算元凶中共前党魁<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%B1%9F%E6%B3%BD%E6%B0%91.md#1">江泽民</a>。#</p>
 <p>责任编辑：高义</p>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ulskhc2002/djy/blob/master/gb/16/1/3/n4608581.md#1">杨宁：这些医生们将面临大审判</a></li>
-<li><a href="https://github.com/ulskhc2002/djy/blob/master/gb/19/4/9/n11173698.md#1">伦敦人民法庭再开庭 听取更多强摘器官证词</a></li>
-<li><a href="https://github.com/ulskhc2002/djy/blob/master/gb/19/4/16/n11190396.md#1">钟声：朋友，您可听到了历史的脚步声？</a></li>
-<li><a href="https://github.com/ulskhc2002/djy/blob/master/gb/19/4/23/n11208044.md#1">金言：天灭中共 江鬼伏诛</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/3/n4608581.md#1">杨宁：这些医生们将面临大审判</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/4/9/n11173698.md#1">伦敦人民法庭再开庭 听取更多强摘器官证词</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/4/16/n11190396.md#1">钟声：朋友，您可听到了历史的脚步声？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/4/23/n11208044.md#1">金言：天灭中共 江鬼伏诛</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/8/n10624963.md#1" target="_blank">捡纸鸣冤、“反毛”凉鞋与“毛语录仗”</a></li><li><a href="https://github.com/ulskhc2002/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/9/n11243655.md#1" target="_blank">如何带好问题生 真善忍解难题</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/17/n9966250.md#1" target="_blank">文革中自杀的几个名人（5）翻译家傅雷</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/4/10/n7538390.md#1" target="_blank">晚期食道癌患者：法轮功救了我的命</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ulskhc2002/djy/blob/master/gb/20/4/3/n12001604.md#1">美媒：3M公司是中共绑架美企的典型范例</a></li>
-<li><a href="https://github.com/ulskhc2002/djy/blob/master/gb/20/4/3/n12000883.md#1">桃园2居家检疫男女陈尸租屋处 内有烧炭痕迹</a></li>
-<li><a href="https://github.com/ulskhc2002/djy/blob/master/gb/20/4/3/n12001498.md#1">【世事关心】习近平为何不拿真金白银救经济？</a></li>
-<li><a href="https://github.com/ulskhc2002/djy/blob/master/gb/20/4/3/n11999535.md#1">【十字路口】中共急寻20万尸袋 多少冤魂亡？</a></li>
-<li><a href="https://github.com/ulskhc2002/djy/blob/master/gb/20/4/3/n12000962.md#1">韩籍夫妻在台未缴居检罚款30万 搭机出境时遭拦</a></li>
-<li><a href="https://github.com/ulskhc2002/djy/blob/master/gb/20/4/3/n12001252.md#1">杜汶泽脸书贴图发文 爆呛中共掩盖疫情</a></li>
-<li><a href="https://github.com/ulskhc2002/djy/blob/master/gb/20/4/4/n12003574.md#1">30岁维密超模染中共肺炎 时尚圈人心惶惶</a></li>
-<li><a href="https://github.com/ulskhc2002/djy/blob/master/gb/20/4/2/n11998678.md#1">疫情下一部消毒旧片疯传 英国超模坎贝尔获赞</a></li>
-<li><a href="https://github.com/ulskhc2002/djy/blob/master/gb/20/4/2/n11998741.md#1">疫情冲击好莱坞 《复联》男星减付女儿赡养费</a></li>
-<li><a href="https://github.com/ulskhc2002/djy/blob/master/gb/20/4/3/n12000210.md#1">美国职业保龄球高手 展现出神入化的特技</a></li>
-<li><a href="https://github.com/ulskhc2002/djy/blob/master/gb/20/4/1/n11994730.md#1">“中美相敬” 一个蒋中正逝世八年后才被宋美龄知道的秘密</a></li>
-<li><a href="https://github.com/ulskhc2002/djy/blob/master/gb/20/4/1/n11994253.md#1">【命理】当我们算到自己的命不好时怎么办？</a></li>
-<li><a href="https://github.com/ulskhc2002/djy/blob/master/gb/20/3/27/n11981509.md#1">高僧洞悉夙怨 慈悲化解恶缘</a></li>
-<li><a href="https://github.com/ulskhc2002/djy/blob/master/gb/20/4/1/n11996073.md#1">【历史上的瘟疫】最致命的感冒：1918大流感</a></li>
-<li><a href="https://github.com/ulskhc2002/djy/blob/master/gb/20/3/27/n11980922.md#1">清明节风俗  人间与天地的契合</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/24/n13744127.md#1">从先秦到明清各代粽子 多味多姿一一道来</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752431.md#1">【神韵早期节目】灯舞（2010年制作）</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746033.md#1">【探索时分】四大理由 中共应向俄罗斯开战？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752381.md#1">【菁英论坛】应付内外困局 中共攻台视政治需求</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752436.md#1">李克强十万人大会事先获得习近平默许？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752419.md#1">专家：中共核检是干柴烈火 随时引爆疫情</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13752937.md#1">林志玲47岁高龄当妈 写给儿子的话令人动容</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13752955.md#1">金马影帝万梓良现身小商演 身体欠安需2人搀扶</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752111.md#1">避免旅行时多花冤枉钱 专家教你几招</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752361.md#1">减肥新进展 香港浸大研究发现减少饮食方法</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ulskhc2002/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ulskhc2002/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/6/29/n11354541.htm">陈思敏：独立人民法庭判决强烈震慑中共</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/6/29/n11354541.htm">陈思敏：独立人民法庭判决强烈震慑中共</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ulskhc2002/djy/blob/master/gb/19/6/29/n11354541.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ulskhc2002/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ulskhc2002/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ulskhc2002/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ulskhc2002/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ulskhc2002/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ulskhc2002/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ulskhc2002/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ulskhc2002/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ulskhc2002/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ulskhc2002/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ulskhc2002/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ulskhc2002/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ulskhc2002/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ulskhc2002/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ulskhc2002/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ulskhc2002/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ulskhc2002/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ulskhc2002/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ulskhc2002/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ulskhc2002/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ulskhc2002/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ulskhc2002/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ulskhc2002/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ulskhc2002/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ulskhc2002/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ulskhc2002/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ulskhc2002/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ulskhc2002/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ulskhc2002/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ulskhc2002/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ulskhc2002/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ulskhc2002/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ulskhc2002/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ulskhc2002/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ulskhc2002/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ulskhc2002/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ulskhc2002/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ulskhc2002/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ulskhc2002/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ulskhc2002/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ulskhc2002/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ulskhc2002/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ulskhc2002/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ulskhc2002/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ulskhc2002/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ulskhc2002/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ulskhc2002/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ulskhc2002/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/19/6/29/n11354541.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
